Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117200

Reg -> 6.6b4: Exit warning :"QItemSelectionModel: Selecting when no model has been set will result in a no-op" from apps with sort proxy filter model

XMLWordPrintable

    • All
    • dc126de22 (dev), 372eaedc5 (6.5.3), ae8e356c5 (6.6), 4f8240be3 (6.5), 3277497b4 (6.6.0), 2bb2286e2 (tqtc/lts-6.2)

      Steps to reproduce:

      • Launch the example (standard sort proxy filter app)
      • Select a few items
      • Quit: Note warning " QItemSelectionModel: Selecting when no model has been set will result in a no-op."

      This is observed in many applications (also Qt Designer/Creator 12), it seems to be related to destruction order

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: