tests/auto/corelib/itemmodels/qitemselectionmodel/tst_qitemselectionmodel.cpp
@@ -106,6 +106,7 @@ private slots:
     void QTBUG93305();
 
     void testSignalsDisconnection();
+    void destroyModel();
 
 private:
     static void messageHandler(QtMsgType type, const QMessageLogContext &context, const QString &msg);
@@ -2945,8 +2946,9 @@ void tst_QItemSelectionModel::QTBUG93305()
     QCOMPARE(spy.count(), 4);
 }
 
-static void (*oldMessageHandler)(QtMsgType, const QMessageLogContext&, const QString&);
+static void (*oldMessageHandler)(QtMsgType, const QMessageLogContext&, const QString&) = nullptr;
 static bool signalError = false;
+static bool seenWarning = false;
 
 // detect disconnect warning:
 // qt.core.qobject.connect: QObject::disconnect: No such signal
@@ -2954,19 +2956,26 @@ void tst_QItemSelectionModel::messageHandler(QtMsgType type, const QMessageLogCo
 {
     Q_ASSERT(oldMessageHandler);
 
-    if (type == QtWarningMsg
-            && QString(context.category) == "qt.core.qobject.connect"
-            && msg.contains("No such")) {
+    if (type == QtWarningMsg) {
+       seenWarning = true;
+       if (QString(context.category) == "qt.core.qobject.connect"
+           && msg.contains("No such")) {
         signalError = true;
+       }
     }
 
     return oldMessageHandler(type, context, msg);
 }
 
+#define SETMSGHANDLER\
+    signalError = false;\
+    seenWarning = false;\
+    oldMessageHandler = qInstallMessageHandler(messageHandler);\
+    auto resetMessageHandler = qScopeGuard([] { qInstallMessageHandler(oldMessageHandler); })
+
 void tst_QItemSelectionModel::testSignalsDisconnection()
 {
-    oldMessageHandler = qInstallMessageHandler(messageHandler);
-    auto resetMessageHandler = qScopeGuard([] { qInstallMessageHandler(oldMessageHandler); });
+    SETMSGHANDLER;
     auto *newModel = new QStandardItemModel(model);
     selection->setModel(newModel);
     QSignalSpy spy(newModel, &QObject::destroyed);
@@ -2976,6 +2985,25 @@ void tst_QItemSelectionModel::testSignalsDisconnection()
     selection->setModel(nullptr);
     QVERIFY(!signalError);
 }
+
+void tst_QItemSelectionModel::destroyModel()
+{
+    SETMSGHANDLER;
+    auto itemModel = std::make_unique<QStandardItemModel>(5, 5);
+    auto selectionModel = std::make_unique<QItemSelectionModel>();
+    selectionModel->setModel(itemModel.get());
+    selectionModel->select(itemModel->index(0, 0), QItemSelectionModel::Select);
+    QVERIFY(!selectionModel->selection().isEmpty());
+    selectionModel->setCurrentIndex(itemModel->index(1, 0), QItemSelectionModel::Select);
+    QVERIFY(selectionModel->currentIndex().isValid());
+
+    itemModel.reset();
+    QVERIFY(!seenWarning);
+    QVERIFY(!selectionModel->currentIndex().isValid());
+    QVERIFY(selectionModel->selection().isEmpty());
+}
+
+#undef SETMSGHANDLER
 
 QTEST_MAIN(tst_QItemSelectionModel)
 #include "tst_qitemselectionmodel.moc"
